Update email, thymeleaf

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -34,7 +34,7 @@
                         </a>
                         <a th:href="@{/admin/pending-feedback}" class='sidebar-link'>
                             <i data-feather="briefcase" width="20"></i>
-                            <span>Phản hồi Dự Án</span>
+                            <span>Phản Hồi Dự Án</span>
                         </a>
                         <a th:href="@{/admin/pending-transport}" class='sidebar-link'>
                             <i data-feather="file-text" width="20"></i>
