--- a/charity/src/main/resources/templates/pages/address_info.html
+++ b/charity/src/main/resources/templates/pages/address_info.html
@@ -6,14 +6,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Address Details</title>
+  <title>THÔNG TIN ĐỊA ĐIỂM</title>
 </head>
 
 <body>
   <div class="main-content container-fluid" layout:fragment="content">
     <div class="card">
       <div class="card-header">
-        <h4 class="card-title" >Thông tin địa chỉ dự án chi tiết</h4>
+        <h4 class="card-title" >THÔNG TIN CHI TIẾT ĐỊA ĐIỂM</h4>
       </div>
       <div class="card-content">
         <div class="card-body">
