--- a/charity/src/main/resources/templates/pages/addresses.html
+++ b/charity/src/main/resources/templates/pages/addresses.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADDRESS</title>
+    <title>QUẢN LÝ ĐỊA ĐIỂM</title>
 </head>
 
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
-        <h1 class="text-info text-center">QUẢN LÝ ĐỊA CHỈ TỪ THIỆN</h1>
+        <h1 class="text-info text-center">QUẢN LÝ ĐỊA ĐIỂM TỪ THIỆN</h1>
         <a th:href="@{/admin/address}" class="btn btn-info mt-5" >THÊM ĐỊA CHỈ</a>
         <div class="container my-2 mt-5">
             <div class="table-responsive">
