--- a/charity/src/main/resources/templates/pages/editprofile.html
+++ b/charity/src/main/resources/templates/pages/editprofile.html
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Project </title>
+    <title>HỒ SƠ CÁ NHÂN</title>
 </head>
 
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title" >PROFILE</h4>
+                <h4 class="card-title">HỒ SƠ CÁ NHÂN</h4>
             </div>
             <div class="card-content">
                 <div class="card-body">
