--- a/charity/src/main/resources/templates/pages/feedback_project_detail.html
+++ b/charity/src/main/resources/templates/pages/feedback_project_detail.html
@@ -8,7 +8,7 @@
 >
   <head>
     <meta charset="UTF-8" />
-    <title>Charity Website</title>
+    <title>XỬ LÝ PHẢN HỒI DỰ ÁN</title>
     <style>
       .main-content.container-fluid {
         text-align: center;
