--- a/charity/src/main/resources/templates/pages/pcategory.html
+++ b/charity/src/main/resources/templates/pages/pcategory.html
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Project Category</title>
+    <title>THÊM DANH MỤC</title>
 </head>
 
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">THÊM THỂ LOẠI</h4>
+                <h4 class="card-title">THÊM DANH MỤC</h4>
             </div>
             <div class="card-content">
                 <div class="card-body">
@@ -21,7 +21,7 @@
                         <div class="form-body">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <label for="name" style="font-size: 16px;">THỂ LOẠI</label>
+                                    <label for="name" style="font-size: 16px;">DANH MỤC</label>
                                 </div>
                                 <div class="col-md-8 form-group">
                                     <input type="text" id="name" name="name" th:field="*{name}"
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="col-sm-12 d-flex justify-content-end">
                                     <button type="submit" class="btn btn-primary me-1 mb-1"
-                                        style="font-size: 16px;">Submit</button>
+                                        style="font-size: 16px;">XÁC NHẬN</button>
                                 </div>
                             </div>
                         </div>
