--- a/charity/src/main/resources/templates/pages/pending_feedback_project.html
+++ b/charity/src/main/resources/templates/pages/pending_feedback_project.html
@@ -7,7 +7,7 @@
 >
   <head>
     <meta charset="UTF-8" />
-    <title>Charity Website</title>
+    <title>XỬ LÝ PHẢN HỒI</title>
     <style>
       .main-content.container-fluid {
         text-align: center;
