--- a/charity/src/main/resources/templates/pages/pending_projects.html
+++ b/charity/src/main/resources/templates/pages/pending_projects.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REPORT</title>
+    <title>XÉT DUYỆT DỰ ÁN TỪ THIỆN</title>
 </head>
 
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
-        <h1 class="text-info text-center">DUYỆT DỰ ÁN TỪ THIỆN</h1>
+        <h1 class="text-info text-center">XÉT DUYỆT DỰ ÁN TỪ THIỆN</h1>
         <div class="container my-2 mt-5">
             <div class="table-responsive">
                 <table class="table table-striped mb-0">
