--- a/charity/src/main/resources/templates/pages/profile.html
+++ b/charity/src/main/resources/templates/pages/profile.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Charity Website</title>
+    <title>HỒ SƠ CÁ NHÂN</title>
     <style>
         .main-content container-fluid {
             text-align: center;
