--- a/charity/src/main/resources/templates/pages/project.html
+++ b/charity/src/main/resources/templates/pages/project.html
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Project </title>
+    <title>THÊM DỰ ÁN</title>
 </head>
 
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title" >THÊM PROJECT</h4>
+                <h4 class="card-title" >THÊM DỰ ÁN</h4>
             </div>
             <div class="card-content">
                 <div class="card-body">
@@ -22,7 +22,7 @@
                         <div class="form-body">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <label>Thể Loại</label>
+                                    <label>Danh mục</label>
                                 </div>
                                 <div class="col-md-8 form-group">
                                     <select id="categoryId" name="categoryId" class="form-control"
