--- a/charity/src/main/resources/templates/pages/userRole.html
+++ b/charity/src/main/resources/templates/pages/userRole.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Charity Website</title>
+    <title>QUẢN LÝ VAI TRÒ NGƯỜI DÙNG</title>
 </head>
 
 <body>
