--- a/charity/src/main/resources/templates/login.html
+++ b/charity/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in - Voler Admin Dashboard</title>
+    <title>ĐĂNG NHẬP TRANG QUẢN TRỊ</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
 
     <link rel="shortcut icon" th:href="@{/images/favicon.svg}" type="image/x-icon">
@@ -27,12 +27,12 @@
                         <div class="card-body">
                             <div class="text-center mb-5">
                                 <img th:src="@{/images/favicon.svg}" height="48" class='mb-4'>
-                                <h3>Sign In</h3>
-                                <p>Please sign in to continue to Voler.</p>
+                                <h3>ĐĂNG NHẬP</h3>
+                                <p>Vui lòng đăng nhập để quản trị website</p>
                             </div>
                             <form th:action="@{/admin/login}" method="post">
                                 <div class="form-group position-relative has-icon-left">
-                                    <label for="username">Username</label>
+                                    <label for="username">Tài khoản</label>
                                     <div class="position-relative">
                                         <input type="text" class="form-control" id="username" name="username">
                                         <div class="form-control-icon">
@@ -42,9 +42,9 @@
                                 </div>
                                 <div class="form-group position-relative has-icon-left">
                                     <div class="clearfix">
-                                        <label for="password">Password</label>
+                                        <label for="password">Mật khẩu</label>
                                         <a href="auth-forgot-password.html" class='float-end'>
-                                            <small>Forgot password?</small>
+                                            <small>Quên mật khẩu?</small>
                                         </a>
                                     </div>
                                     <div class="position-relative">
@@ -61,11 +61,11 @@
                                         <label for="checkbox1">Remember me</label>
                                     </div>
                                     <div class="float-end">
-                                        <a th:href="@{/admin/register}">Don't have an account?</a>
+                                        <a th:href="@{/admin/register}">Chưa có tài khoản?</a>
                                     </div>
                                 </div>
                                 <div class="clearfix">
-                                    <button class="btn btn-primary float-end" type="submit">Submit</button>
+                                    <button class="btn btn-primary float-end" type="submit">Xác nhận</button>
                                 </div>
                             </form>
                             <div class="divider">
