--- a/charity/src/main/resources/templates/pages/address.html
+++ b/charity/src/main/resources/templates/pages/address.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADDRESS</title>
+    <title>XÉT DUYỆT ĐỊA ĐIỂM</title>
 </head>
 
 <body>
