--- a/charity/src/main/resources/templates/pages/ncategory.html
+++ b/charity/src/main/resources/templates/pages/ncategory.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thêm Danh Mục Tin Tức</title>
+    <title>THÊM DANH MỤC</title>
 </head>
 
 <body>
