--- a/charity/src/main/resources/templates/pages/pending_project.html
+++ b/charity/src/main/resources/templates/pages/pending_project.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Charity Website</title>
+    <title>XDUYỆT DỰ ÁN TỪ THIỆN</title>
     <style>
         .main-content.container-fluid {
             text-align: center;
