--- a/charity/src/main/resources/templates/pages/skills.html
+++ b/charity/src/main/resources/templates/pages/skills.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Project Category</title>
+    <title>QUẢN LÝ KỸ NĂNG TỪ THIỆN</title>
 </head>
 
 <body>
