--- a/charity/src/main/resources/templates/register.html
+++ b/charity/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up - Voler Admin Dashboard</title>
+    <title>ĐĂNG KÝ TÀI KHOẢN</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
 
     <link rel="shortcut icon" th:href="@{/images/favicon.svg}" type="image/x-icon">
@@ -23,14 +23,14 @@
                         <div class="card-body">
                             <div class="text-center mb-5">
                                 <img th:src="@{/admin/images/favicon.svg}" height="48" class='mb-4'>
-                                <h3>Sign Up</h3>
-                                <p>Please fill the form to register.</p>
+                                <h3>Đăng ký</h3>
+                                <p>Vui lòng điền biểu mẫu bên dưới</p>
                             </div>
                             <form th:action="@{/admin/register}" method="post" th:object="${user}" role="form">
                                 <div class="row">
                                     <div class="col-md-6 col-12">
                                         <div class="form-group">
-                                            <label for="username-column">Username</label>
+                                            <label for="username-column">Tài khoản</label>
                                             <input type="text" id="username" class="form-control" name="username-column"
                                                 th:field="*{username}">
                                             <p th:errors="*{username}" class="text-danger"
@@ -39,7 +39,7 @@
                                     </div>
                                     <div class="col-md-6 col-12">
                                         <div class="form-group">
-                                            <label for="email-id-column">Password</label>
+                                            <label for="email-id-column">Mật khẩu</label>
                                             <input type="password" id="password" class="form-control"
                                                 name="email-id-column" th:field="*{password}">
                                         </div>
@@ -53,9 +53,9 @@
                                     </div>
                                 </diV>
 
-                                <a th:href="@{/admin/login}">Have an account? Login</a>
+                                <a th:href="@{/admin/login}">Đã có tài khoản? Đăng nhập</a>
                                 <div class="clearfix">
-                                    <button class="btn btn-primary float-end" type="submit">Submit</button>
+                                    <button class="btn btn-primary float-end" type="submit">Xác nhận</button>
                                 </div>
                             </form>
                             <div class="divider">
