--- a/charity/src/main/resources/templates/pages/volunteers.html
+++ b/charity/src/main/resources/templates/pages/volunteers.html
@@ -24,7 +24,7 @@
                             <th>NGÀY BẮT ĐẦU</th>
                             <th>NGÀY KẾT THÚC</th>
                             <th>MÔ TẢ</th>
-                            <th>ACTION</th>
+                            <th>CHỨC NĂNG</th>
                         </tr>
                     </thead>
                     <tbody>
