--- a/client/src/pages/projectpage/UploadProject.css
+++ b/client/src/pages/projectpage/UploadProject.css
@@ -1,7 +1,6 @@
 .resgisVolunContainer {
     max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
@@ -10,7 +9,7 @@
   
   .form-heading {
     text-align: center;
-    font-size: 24px;
+    font-size: 30px;
     color: #007bff;
     margin-top: 20px;
   }
@@ -21,12 +20,14 @@
   
   .form-label {
     font-weight: bold;
+    font-size: 16px;
   }
   
   .form-control {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
+    margin: 5px;
     border-radius: 5px;
   }
   
